--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "deps/stb"]
 	path = deps/stb
 	url = https://github.com/nothings/stb.git
+[submodule "deps/tinythreadpp"]
+	path = deps/tinythreadpp
+	url = https://github.com/mbitsnbites/tinythreadpp.git
