--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "deps/tinythreadpp"]
 	path = deps/tinythreadpp
 	url = https://github.com/mbitsnbites/tinythreadpp.git
+[submodule "deps/spdlog"]
+	path = deps/spdlog
+	url = https://github.com/gabime/spdlog.git
