--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = https://github.com/nothings/stb.git
 [submodule "deps/tinythreadpp"]
 	path = deps/tinythreadpp
-	url = https://github.com/mbitsnbites/tinythreadpp.git
+	url = https://github.com/sgowen/tinythreadpp.git
 [submodule "deps/spdlog"]
 	path = deps/spdlog
 	url = https://github.com/gabime/spdlog.git
