--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "deps/box2d"]
-	path = deps/box2d
-	url = https://github.com/erincatto/box2d.git
-[submodule "deps/rapidjson"]
-	path = deps/rapidjson
-	url = https://github.com/Tencent/rapidjson.git
-[submodule "deps/spdlog"]
-	path = deps/spdlog
-	url = https://github.com/gabime/spdlog.git
-[submodule "deps/stb"]
-	path = deps/stb
-	url = https://github.com/nothings/stb.git
 [submodule "deps/DirectXTK"]
 	path = deps/DirectXTK
 	url = git@github.com:microsoft/DirectXTK.git
@@ -22,3 +10,15 @@
 [submodule "deps/oboe"]
 	path = deps/oboe
 	url = git@github.com:google/oboe.git
+[submodule "deps/box2d"]
+	path = deps/box2d
+	url = git@github.com:erincatto/box2d.git
+[submodule "deps/rapidjson"]
+	path = deps/rapidjson
+	url = git@github.com:Tencent/rapidjson.git
+[submodule "deps/spdlog"]
+	path = deps/spdlog
+	url = git@github.com:gabime/spdlog.git
+[submodule "deps/stb"]
+	path = deps/stb
+	url = git@github.com:nothings/stb.git
