Fixing double texture loading issue
Yes, this was the REAL reason I had memory leaks. So now I have no beef with stb whatsoever!

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "deps/ios-cmake"]
 	path = deps/ios-cmake
 	url = git@github.com:leetal/ios-cmake.git
-[submodule "deps/libpng"]
-	path = deps/libpng
-	url = git@github.com:glennrp/libpng.git
+[submodule "deps/stb"]
+	path = deps/stb
+	url = git@github.com:nothings/stb.git
