--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "deps/steamworks_sdk"]
 	path = deps/steamworks_sdk
 	url = git@github.com:sgowen/steamworks_sdk.git
+[submodule "deps/box2d"]
+	path = deps/box2d
+	url = git@github.com:erincatto/box2d.git
