Getting light rendering to work on Windows

--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -17,7 +17,7 @@
   "inputLoggingEnabled": "false",
   "networkLoggingEnabled": "false",
   "physicsLoggingEnabled": "false",
-  "audioDisabled": "false",
+  "audioDisabled": "true",
   "musicDisabled": "false",
   "volume": "1.0",
   "extrapolatePhysics": "true",
