--- a/assets/data/nosfuratu/json/game/Config.json
+++ b/assets/data/nosfuratu/json/game/Config.json
@@ -2,5 +2,6 @@
   "filePathAssets": "json/game/Assets.json",
   "filePathRenderer": "json/game/Renderer.json",
   "filePathEntityLayoutManager": "json/game/EntityLayoutManager.json",
-  "filePathEntityManager": "json/game/EntityManager.json"
+  "filePathEntityManager": "json/game/EntityManager.json",
+  "physicsEngine": "Nos"
 }
