--- a/assets/data/dante/json/game/Config.json
+++ b/assets/data/dante/json/game/Config.json
@@ -1,6 +1,7 @@
 {
   "filePathAssets": "json/game/Assets.json",
   "filePathRenderer": "json/game/Renderer.json",
+  "filePathEntityInputMappingManager": "json/game/EntityInputMappingManager.json",
   "filePathEntityLayoutManager": "json/game/EntityLayoutManager.json",
   "filePathEntityManager": "json/game/EntityManager.json",
   "physicsEngine": "Box2D"
