--- a/src/platform/windows/GowEngine.vcxproj
+++ b/src/platform/windows/GowEngine.vcxproj
@@ -64,7 +64,7 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup>
-      <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
+    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -72,14 +72,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../deps/box2d/include;../../../deps/file-compat;../../../deps/glfw/include;../../../deps/glfw/deps;../../../deps/libsndfile/include;../../../deps/openal-soft/include;../../../deps/rapidjson/include;../../../deps/stb;../../../deps/steamworks_sdk/public;../../../../GowEngine/src;../../../../GowEngine/include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../deps/box2d/include;../../../deps/file-compat;../../../deps/glfw/include;../../../deps/glfw/deps;../../../deps/libsndfile/include;../../../deps/Lua/lua-5.4.6/include;../../../deps/openal-soft/include;../../../deps/rapidjson/include;../../../src/deps/sol2/include;../../../deps/stb;../../../deps/steamworks_sdk/public;../../../../GowEngine/src;../../../../GowEngine/include;</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>box2d_debug.lib;glfw3.lib;sndfile.lib;OpenAL32.lib;steam_api64.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lua_static.lib;box2d_debug.lib;glfw3.lib;sndfile.lib;OpenAL32.lib;steam_api64.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PreBuildEvent>
@@ -97,16 +98,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../deps/box2d/include;../../../deps/file-compat;../../../deps/glfw/include;../../../deps/glfw/deps;../../../deps/libsndfile/include;../../../deps/openal-soft/include;../../../deps/rapidjson/include;../../../deps/stb;../../../deps/steamworks_sdk/public;../../../../GowEngine/src;../../../../GowEngine/include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../deps/box2d/include;../../../deps/file-compat;../../../deps/glfw/include;../../../deps/glfw/deps;../../../deps/libsndfile/include;../../../deps/Lua/lua-5.4.6/include;../../../deps/openal-soft/include;../../../deps/rapidjson/include;../../../src/deps/sol2/include;../../../deps/stb;../../../deps/steamworks_sdk/public;../../../../GowEngine/src;../../../../GowEngine/include;</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>box2d.lib;glfw3.lib;sndfile.lib;OpenAL32.lib;steam_api64.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lua_static.lib;box2d.lib;glfw3.lib;sndfile.lib;OpenAL32.lib;steam_api64.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PreBuildEvent>
