bezst kinda wip there is i'm tired shit

--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -8,10 +8,11 @@
   "steamGameDir": "projectdante",
   "steamProductName": "Project Dante",
   "steamProductDescription": "A 4 Player Co-Op Dungeon Crawler set in a Grim Wasteland",
-  "consoleLoggingEnabled": "false",
+  "consoleLoggingEnabled": "true",
   "framesPerSecond": "60",
   "fileLoggingEnabled": "false",
   "glfwLoggingEnabled": "false",
+  "logLua": "true",
   "logOpenGL": "false",
   "logOpenAL": "false",
   "inputLoggingEnabled": "false",
