Final push and then no more cpp for you, Jon!

--- a/assets/data/dante/json/game/EntityInputMapping/RobotInputMapping.json
+++ b/assets/data/dante/json/game/EntityInputMapping/RobotInputMapping.json
@@ -2,7 +2,7 @@
   "gamepadEvents": {
       "A": [
           {
-              "inputStateFlag": "EXECUTING_ATTACK",
+              "inputStateFlag": "ATTACKING",
               "condition": "pressed"
           }
       ],
@@ -44,7 +44,7 @@
       ],
       "K": [
           {
-              "inputStateFlag": "EXECUTING_ATTACK",
+              "inputStateFlag": "ATTACKING",
               "condition": "pressed"
           }
       ],
@@ -80,7 +80,7 @@
       ],
       "ARROW_DOWN": [
           {
-              "inputStateFlag": "EXECUTING_ATTACK",
+              "inputStateFlag": "ATTACKING",
               "condition": "pressed"
           }
       ]
