--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -1,6 +1,6 @@
 {
   "title": "GowEngine",
-  "mode": "dante",
+  "mode": "nosfuratu",
   "fullScreen": "false",
   "vsync": "true",
   "useSteamNetworking": "false",
