--- a/assets/data/nosfuratu/json/game/EntityInputMapping/JonInputMapping.json
+++ b/assets/data/nosfuratu/json/game/EntityInputMapping/JonInputMapping.json
@@ -14,19 +14,19 @@
       ],
       "X": [
           {
-              "inputStateFlag": "TRIGGERING_SPECIAL",
+              "inputStateFlag": "SPECIAL",
               "condition": "pressed"
           }
       ],
       "Y": [
           {
-              "inputStateFlag": "EXECUTING_ABILITY",
+              "inputStateFlag": "ABILITY",
               "condition": "pressed"
           }
       ],
       "BUMPER_LEFT": [
           {
-              "inputStateFlag": "EXECUTING_ABILITY",
+              "inputStateFlag": "ABILITY",
               "condition": "pressed"
           }
       ],
@@ -74,13 +74,13 @@
       ],
       "H": [
           {
-              "inputStateFlag": "EXECUTING_ABILITY",
+              "inputStateFlag": "ABILITY",
               "condition": "pressed"
           }
       ],
       "U": [
           {
-              "inputStateFlag": "TRIGGERING_SPECIAL",
+              "inputStateFlag": "SPECIAL",
               "condition": "pressed"
           }
       ],
@@ -122,7 +122,7 @@
       ],
       "ARROW_DOWN": [
           {
-              "inputStateFlag": "TRIGGERING_SPECIAL",
+              "inputStateFlag": "SPECIAL",
               "condition": "pressed"
           }
       ]
