wip, and that's okay.

--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -1,6 +1,7 @@
 {
   "title": "GowEngine",
   "mode": "engine",
+  "physicsEngine": "Box2D",
   "fullScreen": "false",
   "vsync": "true",
   "useSteamNetworking": "false",
