--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -1,35 +1,35 @@
 {
-  "title": "GowEngine",
-  "mode": "engine",
-  "physicsEngine": "Box2D",
-  "fullScreen": "false",
-  "vsync": "true",
-  "useSteamNetworking": "false",
-  "versionName": "1.0.0.0",
-  "steamGameDir": "projectdante",
-  "steamProductName": "Project Dante",
-  "steamProductDescription": "A 4 Player Co-Op Dungeon Crawler set in a Grim Wasteland",
-  "consoleLoggingEnabled": "true",
-  "framesPerSecond": "60",
-  "fileLoggingEnabled": "false",
-  "glfwLoggingEnabled": "false",
-  "logFileIO": "true",
-  "logLua": "true",
-  "logOpenGL": "false",
-  "logOpenAL": "false",
-  "inputLoggingEnabled": "false",
-  "networkLoggingEnabled": "false",
-  "physicsLoggingEnabled": "false",
-  "audioDisabled": "true",
-  "musicDisabled": "false",
-  "volume": "1.0",
-  "extrapolatePhysics": "true",
-  "clientPortHost": "5005",
-  "clientPortJoin": "5055",
-  "serverPort": "5000",
-  "maxNumFramesOfRollback": "5",
-  "numFramesOfInputDelay": "5",
-  "numFramesOfSimulatedLatency": "0"
+    "title": "GowEngine",
+    "mode": "engine",
+    "physicsEngine": "Box2D",
+    "fullScreen": "false",
+    "vsync": "true",
+    "useSteamNetworking": "true",
+    "versionName": "1.0.0.0",
+    "steamGameDir": "projectdante",
+    "steamProductName": "Project Dante",
+    "steamProductDescription": "A 4 Player Co-Op Dungeon Crawler set in a Grim Wasteland",
+    "consoleLoggingEnabled": "true",
+    "framesPerSecond": "60",
+    "fileLoggingEnabled": "false",
+    "glfwLoggingEnabled": "false",
+    "logFileIO": "true",
+    "logLua": "true",
+    "logOpenGL": "false",
+    "logOpenAL": "false",
+    "inputLoggingEnabled": "false",
+    "networkLoggingEnabled": "false",
+    "physicsLoggingEnabled": "false",
+    "audioDisabled": "true",
+    "musicDisabled": "false",
+    "volume": "1.0",
+    "extrapolatePhysics": "true",
+    "clientPortHost": "5005",
+    "clientPortJoin": "5055",
+    "serverPort": "5000",
+    "maxNumFramesOfRollback": "5",
+    "numFramesOfInputDelay": "5",
+    "numFramesOfSimulatedLatency": "0"
 }
 
 // mode can be "engine", "dante", or "nosfuratu"
