--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -27,6 +27,7 @@
     "clientPortHost": "5005",
     "clientPortJoin": "5055",
     "serverPort": "5000",
+    "mtuSize": "1200",
     "maxNumFramesOfRollback": "5",
     "numFramesOfInputDelay": "5",
     "numFramesOfSimulatedLatency": "0"
