--- a/assets/data/engine/json/Config.json
+++ b/assets/data/engine/json/Config.json
@@ -13,16 +13,16 @@
     "framesPerSecond": "60",
     "fileLoggingEnabled": "false",
     "glfwLoggingEnabled": "false",
-    "logFileIO": "true",
-    "logLua": "true",
+    "logFileIO": "false",
+    "logLua": "false",
     "logOpenGL": "false",
     "logOpenAL": "false",
     "inputLoggingEnabled": "false",
     "networkLoggingEnabled": "false",
     "physicsLoggingEnabled": "false",
-    "audioDisabled": "true",
+    "audioDisabled": "false",
     "musicDisabled": "false",
-    "volume": "1.0",
+    "volume": "0.1",
     "extrapolatePhysics": "true",
     "clientPortHost": "5005",
     "clientPortJoin": "5055",
